--- a/feature-engineering/bqml_basic_feature_eng.ipynb
+++ b/feature-engineering/bqml_basic_feature_eng.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "seven-spray",
+   "id": "regular-fluid",
    "metadata": {},
    "source": [
     "# **Basic Feature Engineering in BQML**"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "future-carroll",
+   "id": "institutional-backing",
    "metadata": {},
    "source": [
     "**Learning Objectives**"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wicked-placement",
+   "id": "vietnamese-consumer",
    "metadata": {},
    "source": [
     "1. Create SQL statements to evaluate the model\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "according-rwanda",
+   "id": "internal-gardening",
    "metadata": {},
    "source": [
     "## **Introduction**"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "drawn-strain",
+   "id": "interracial-anthropology",
    "metadata": {},
    "source": [
     "In this lab, we utilise feature engineering to improve the prediction of the fare amount for a taxi ride in New York City. We will use BigQuery ML to build a taxifare prediction model, using feature engineering to improve and create a final model."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pregnant-roommate",
+   "id": "returning-mirror",
    "metadata": {},
    "source": [
     "In this notebook, we set up the environment, create the project data set, create a feature engineering table, create and evaluate a baseline model, extract temporal features, perform a feature cross on temporal features, and evaluate model performance throughout the process."
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "casual-album",
+   "id": "progressive-triple",
    "metadata": {},
    "source": [
     "### **Set up environment variables and load necessary libraries**"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conservative-colony",
+   "id": "secondary-index",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "jewish-bullet",
+   "id": "proper-candidate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "catholic-flash",
+   "id": "built-brave",
    "metadata": {},
    "source": [
     "### **The source data set**"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "falling-january",
+   "id": "improved-arbor",
    "metadata": {},
    "source": [
     "Our data set is in BigQuery. The taxi fare data is a publically available data set, meaning anyone with a GCP account has access."
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defined-yeast",
+   "id": "spare-naples",
    "metadata": {},
    "source": [
     "The Taxi Fare data set is relatively large at 55 million training rows, but simple to understand, with only six features. The `fare_amount` is the target, the continuous value we'll train a model to predict."
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-regulation",
+   "id": "funky-aside",
    "metadata": {},
    "source": [
     "## **Create a BigQuery Data Set**"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "failing-leeds",
+   "id": "collective-technician",
    "metadata": {},
    "source": [
     "A BigQuery data set is a container for tables, views, and models built with BigQuery ML. Let's create one called `feat_eng`. We'll do the same for a GCS bucket for our project too."
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "apparent-mountain",
+   "id": "historic-deputy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "detailed-assessment",
+   "id": "signed-certificate",
    "metadata": {},
    "source": [
     "## **Create the training data table**"
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-arctic",
+   "id": "reflected-disorder",
    "metadata": {},
    "source": [
     "Since there is already a publicly available data set, we can simply create the training data table using this raw input data. Note the `WHERE` clause in the below query: This clause allows us to TRAIN a portion of the data (e.g. one hundred thousand versus one million rows), which keeps your query costs down."
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varying-check",
+   "id": "swedish-orleans",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "touched-supervisor",
+   "id": "caroline-polymer",
    "metadata": {},
    "source": [
     "## **Verify table creation**"
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "literary-venice",
+   "id": "eight-terror",
    "metadata": {},
    "source": [
     "Verify that you created the data set."
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "specified-abraham",
+   "id": "casual-shore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "posted-internet",
+   "id": "connected-august",
    "metadata": {},
    "source": [
     "## **Baseline Model**"
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bigger-vatican",
+   "id": "palestinian-apple",
    "metadata": {},
    "source": [
     "### **Create the baseline model**"
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "everyday-customs",
+   "id": "played-accordance",
    "metadata": {},
    "source": [
     "Next, you create a linear regression baseline model with no feature engineering. Recall that a model in BigQuery ML represents what an ML system has learned from the training data. A baseline model is a solution to a problem without applying any ML techniques."
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lesbian-arrival",
+   "id": "south-sending",
    "metadata": {},
    "source": [
     "When creating a BQML model, you must specify the model type (in our case linear regression) and the input label (`fare_amount`). Note also that we are using the training data table as the data source."
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "light-saturn",
+   "id": "regulation-norfolk",
    "metadata": {},
    "source": [
     "Now we create the SQL statement to create the baseline model."
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "jewish-market",
+   "id": "excellent-angle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-floor",
+   "id": "optional-office",
    "metadata": {},
    "source": [
     "Note, the query takes several minutes to complete. After the first iteration is complete, your model (`baseline_model`) appears in the navigation panel of the BigQuery web UI. Because the query uses a `CREATE_MODEL` statement to create a model, you do not see query results."
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "monetary-clerk",
+   "id": "naval-round",
    "metadata": {},
    "source": [
     "You can observe the model as it's being trained by viewing the Model stats tab in the BigQuery web UI. As soon as the first iteration completes, the tab is updated. The stats continue to update as each iteration completes."
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entitled-variable",
+   "id": "disabled-condition",
    "metadata": {},
    "source": [
     "### **Evaluate the baseline model**"
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alpine-psychiatry",
+   "id": "incorporated-riding",
    "metadata": {},
    "source": [
     "Note that BigQuery automatically split the data we gave it, and trained on only a part of the data and used the rest for evaluation. After creating your model, you evaluate the performance of the regressor using the `ML.EVALUATE` function. The `ML.EVALUATE` function evaluates the predicted values against the actual data."
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adaptive-field",
+   "id": "adolescent-sugar",
    "metadata": {},
    "source": [
     "Review the learning and eval statistics for the `baseline_model`."
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "challenging-dallas",
+   "id": "worst-oriental",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "freelance-incentive",
+   "id": "separate-diagnosis",
    "metadata": {},
    "source": [
     "**NOTE**: Because you performed a linear regression, the results include the following columns:\n",
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attended-character",
+   "id": "tutorial-idaho",
    "metadata": {},
    "source": [
     "**Mean squared error (MSE)** $-$ Measures the difference between the values our model predicted using the test set and the actual values. You can also think of it as the distance between your regression (best fit) line and the predicted values."
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heated-glucose",
+   "id": "tender-honey",
    "metadata": {},
    "source": [
     "**Root mean squared error (RMSE)** $-$ The primary evaluation metric for this ML problem is the root mean-squared error. RMSE measures the difference between the predictions of a model, and the observed values. A large RMSE is equivalent to a large average error, so smaller values of RMSE are better. One nice property of RMSE is that the error is given in the units being measured, so you can tell very directly how incorrect the model might be on unseen data."
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressive-celebrity",
+   "id": "compound-boutique",
    "metadata": {},
    "source": [
     "**R2** $-$ An important metric in the evaluation results is the R2 score. The R2 score is a statistical measure that determines if the linear regression predictions approximate the actual data. $0$ indicates that the model explains none of the variability of the response data around the mean. $1$ indicates that the model explains all the variability of the response data around the mean."
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accredited-nightmare",
+   "id": "exceptional-sport",
    "metadata": {},
    "source": [
     "Next, we write a SQL query to take the `SQRT()` of the mean squared error as your loss metric for evaluation for the `benchmark_model`."
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "professional-chamber",
+   "id": "practical-spanking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "utility-header",
+   "id": "inside-revelation",
    "metadata": {},
    "source": [
     "## **Model 1 $-$ EXTRACT `dayofweek` from the `pickup_datetime` feature**"
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moral-gospel",
+   "id": "artistic-poison",
    "metadata": {},
    "source": [
     "- As you recall, `dayofweek` is an `enum` representing the 7 days of the week. This factory allows the `enum` to be obtained from the `int` value. The `int` value follows the ISO-8601 standard, from `1` (Monday) to `7` (Sunday).\n",
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demanding-investment",
+   "id": "fundamental-credits",
    "metadata": {},
    "source": [
     "Next, we create a model titled `model_1` from the benchmark model and extract out the `dayofweek`"
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interested-guide",
+   "id": "distant-inside",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frank-advocate",
+   "id": "eight-calculator",
    "metadata": {},
    "source": [
     "Next, two distinct SQL statements show the TRAINING and EVALUATION metrics of `model_1`."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lasting-configuration",
+   "id": "infinite-acoustic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "innocent-organization",
+   "id": "graphic-puzzle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "orange-annual",
+   "id": "liked-texture",
    "metadata": {},
    "source": [
     "Here we run a SQL query to take the `SQRT()` of the mean squared error as your loss metric for evaluation for the `benchmark_model`"
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "south-creativity",
+   "id": "after-talent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adolescent-nickname",
+   "id": "fitted-helena",
    "metadata": {},
    "source": [
     "## **Model 2 $-$ EXTRACT `hourofday` from the `pickup_datetime` feature**"
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gross-puzzle",
+   "id": "vietnamese-tissue",
    "metadata": {},
    "source": [
     "As you recall, `pickup_datetime` is stored as a `TIMESTAMP`, where the Timestamp format is retrieved in the standard output format $-$ `year-mont-day hour:minute:second`. Hourofday returns the integer number representing the hour number of the given date."
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "successful-depth",
+   "id": "previous-arlington",
    "metadata": {},
    "source": [
     "Hourof day is best thought of as a discrete ordinal variable (and not a categorical feature), as the hours can be ranked (e.g there is a natural ordering of the values). Hourofday has an added characteristic of being cyclic, since 12am follows 11pm and precedes 1am."
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occasional-appearance",
+   "id": "satisfied-baltimore",
    "metadata": {},
    "source": [
     "Next, we create a model titled `model_2` and EXTRACT the `hourofday` from the `pickup_datetime` feature to improve our model's rmse."
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "usual-stephen",
+   "id": "peripheral-television",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "filled-preview",
+   "id": "separated-burke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "present-desert",
+   "id": "ordered-training",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,16 +625,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "painful-clinton",
+   "id": "sixth-press",
    "metadata": {},
    "source": [
     "### **Model 3 $-$ Feature cross `dayofweek` and `hourofday` using `CONCAT`**"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "substantial-assembly",
+   "metadata": {},
+   "source": [
+    "First, let's allow the model to learn traffic patterns by creating a new feature that combines the time of day and day of week. This is called a *feature cross*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outer-tunnel",
+   "id": "short-visiting",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -642,15 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-trailer",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "willing-recognition",
+   "id": "senior-armstrong",
    "metadata": {},
    "outputs": [],
    "source": []
